@@ -1249,16 +1249,14 @@ class Axes(maxes.Axes):
             b = not self._axisline_on
         if b:
             self._axisline_on = True
-            #self.frame.set_visible(False)
             for s in self.spines.values():
-                s.artist.set_visible(False)
+                s.set_visible(False)
             self.xaxis.set_visible(False)
             self.yaxis.set_visible(False)
         else:
             self._axisline_on = False
-            #self.frame.set_visible(True)
             for s in self.spines.values():
-                s.artist.set_visible(True)
+                s.set_visible(True)
             self.xaxis.set_visible(True)
             self.yaxis.set_visible(True)
 
